third_party/move/move-compiler-v2/tests/checking/positional_fields/struct_postfix_ability_decl_invalid.move
module 0x42::test {
    struct S has drop {};
}
